Mon Jun  1 01:05:52 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/grid.c: fix a comment. :)
	* ChangeLog: fix my last entry

Sun May 31 21:50:12 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/deinterlace/deinterlace.c: patch from sjburges
	to prevent out of bounds indexing array (anyone see a pattern
	here?)

Sun May 31 15:35:33 PDT 1998 Manish Singh <yosh@gimp.org>

	* gimptool.in: use test -r instead of test -e for portability

Sun May 31 08:03:54 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/exchange/exchange.c: fix from sjburges to stop
	out of bounds indexing of array.

Sun May 31 01:58:36 PDT 1998 Manish Singh <yosh@gimp.org>

	* README
	* INSTALL: make info a bit more current

	* gimptool.in: update usage message

	* gtkrc.forest2: sample gtkrc file with cool stuff from tigert

	* gimp.1
	* gimptool.1: updated/rewrote some

	* app/fileops.c: removed the "might have tried to save an RGB
	image with an indexed plugin" since g_message gives nice user
	feedback now

	* app/interface.c: fix the mem leak properly

Sat May 30 23:42:12 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/interface.c: plug mem leak in message_box

	* plug-ins/mail/mail.c: use g_message

	* plug-ins/script-fu/scripts/carve-it.scm: fix for gimp-layer-new
	params from Kevin Cozens <kcozens@interlog.com>

	* plug-ins/CEL/CEL.c
	* plug-ins/pcx/pcx.c
	* plug-ins/tiff/tiff.c: updates from author

	* plug-ins/png/png.c: correct copyright

	* plug-ins/print/print.h: use correct version

Fri May 29 23:54:42 PDT 1998 Manish Singh <yosh@gimp.org>

	* more changes to use g_message. All of app uses it now, plus
	the major file plugins.

	* plug-ins/CEL/CEL.c: update from author

	* INSTALL: info about why optional plugins won't build

Sat May 30 02:03:19 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/grid/grid.c: fix by sjburges to fix grid on selections.

Fri May 29 23:34:07 EDT 1998  Matthew Wilson  <msw@gimp.org>
